tests/sksl/errors/UniformVarWithInitializerExpression.glsl
### Compilation failed:

error: 1: 'uniform' variables cannot use initializer expressions
1 error
